--- a/frontend/app/src/main/res/values/config.xml
+++ b/frontend/app/src/main/res/values/config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="base_url" translatable="false">https://amoz-backend.azurewebsites.net/</string>
+    <string name="google_sign_in_client_id" translatable="false">51440805312-7aq0a0kn9iqs21raedh7i6ihppbs63nu.apps.googleusercontent.com</string>
 </resources>
